--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Syeda Tayyeba Resume</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Resume of Syeda Tayyeba, a Frontend Developer skilled in React, Bootstrap, SEO, and modern web technologies." />
+  <meta name="keywords" content="Syeda Tayyeba, Frontend Developer, Web Developer, SEO Specialist, HTML, CSS, JavaScript, React, Bootstrap, Lahore Developer" />
+  <meta name="author" content="Syeda Tayyeba" />
+  <title>Syeda Tayyeba – Frontend Developer & SEO Specialist</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -76,17 +80,17 @@
 <body>
   <div class="resume">
     <h1>Syeda Tayyeba</h1>
-    <h2>Frontend Developer</h2>
+    <h2>Frontend Developer & SEO Specialist</h2>
     <p class="contact">Lahore, Pakistan | syedatayyeba78@gmail.com | 03094100215</p>
     <p class="linkedin"><a href="https://www.linkedin.com/in/syeda-tayyeba-6a665632b" target="_blank">LinkedIn Profile</a></p>
 
     <div class="section">
       <h3>Professional Summary</h3>
       <p>
-        Motivated and detail-oriented Frontend Developer with a strong foundation in web technologies and UI development.
-        Experienced in creating responsive, user-friendly websites using modern frameworks like React and Bootstrap.
-        Passionate about crafting clean, maintainable code and continuously learning new tools to improve user experience.
-        Recently completed a hands-on internship where I contributed to multiple real-world web projects.
+        Enthusiastic and detail-oriented Frontend Developer with hands-on experience in building responsive, user-focused websites.
+        Skilled in modern technologies including React, Bootstrap, and JavaScript, combined with strong knowledge of SEO best practices.
+        Capable of optimizing websites for performance, search engine visibility, and user engagement.
+        Successfully completed a professional internship contributing to real-world web development and SEO projects.
       </p>
     </div>
 
@@ -94,9 +98,10 @@
       <h3>Technical Skills</h3>
       <ul>
         <li><span class="bold">Languages:</span> HTML, CSS, JavaScript, C++, OOP, DBMS</li>
-        <li><span class="bold">Frameworks:</span> React, Bootstrap, Material UI (MUI)</li>
-        <li><span class="bold">Tools:</span> Git, VS Code, Chrome DevTools</li>
-        <li><span class="bold">Other:</span> Responsive Design, Cross-Browser Compatibility, UI/UX Basics</li>
+        <li><span class="bold">Frameworks & Libraries:</span> React, Bootstrap, Material UI (MUI)</li>
+        <li><span class="bold">SEO Tools & Techniques:</span> On-Page SEO, Off-Page SEO, Technical SEO, Keyword Research, Meta Tags Optimization, Structured Data, Google Search Console, Ahrefs</li>
+        <li><span class="bold">Developer Tools:</span> Git, VS Code, Chrome DevTools</li>
+        <li><span class="bold">Other:</span> Responsive Web Design, Cross-Browser Compatibility, UI/UX Principles</li>
       </ul>
     </div>
 
@@ -105,10 +110,10 @@
       <p class="subheading bold">Frontend Intern — TecJaunt</p>
       <p>Lahore, Pakistan (Jan 2025 – April 2025)</p>
       <ul>
-        <li>Built and maintained multiple responsive websites using HTML, CSS, and React.</li>
-        <li>Converted design mockups into functional UI using Bootstrap and MUI.</li>
-        <li>Focused on clean code, mobile responsiveness, and performance.</li>
-        <li>Worked closely with senior developers in an agile environment.</li>
+        <li>Developed responsive user interfaces using HTML, CSS, JavaScript, and React.</li>
+        <li>Translated UI/UX designs into pixel-perfect components using Bootstrap and Material UI.</li>
+        <li>Implemented best practices in performance optimization and SEO structure.</li>
+        <li>Collaborated with senior developers in agile sprints to deliver project milestones.</li>
       </ul>
     </div>
 
@@ -116,9 +121,9 @@
       <h3>Projects</h3>
       <p class="subheading bold">Responsive Website Collection</p>
       <p>
-        Built multiple fully responsive websites during internship using HTML, CSS, and React.
-        Focused on clean layouts, interactive UI components, and modern design principles.
-        Implemented performance optimization techniques and accessibility best practices.
+        Created a series of modern, mobile-friendly websites during internship using React, HTML, and CSS.
+        Integrated performance optimization techniques and accessibility standards.
+        Applied structured data, keyword optimization, and meta enhancements for improved SEO rankings.
       </p>
     </div>
 
