--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     .subheading {
       font-size: 16px;
       margin-top: 10px;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -107,7 +108,7 @@
 
     <div class="section">
       <h3>Experience</h3>
-      <p class="subheading bold">Frontend Intern — TecJaunt</p>
+      <p class="subheading">Frontend Intern — TecJaunt</p>
       <p>Lahore, Pakistan (Jan 2025 – April 2025)</p>
       <ul>
         <li>Developed responsive user interfaces using HTML, CSS, JavaScript, and React.</li>
@@ -119,17 +120,33 @@
 
     <div class="section">
       <h3>Projects</h3>
-      <p class="subheading bold">Responsive Website Collection</p>
+
+      <p class="subheading">Educational Website</p>
       <p>
-        Created a series of modern, mobile-friendly websites during internship using React, HTML, and CSS.
-        Integrated performance optimization techniques and accessibility standards.
-        Applied structured data, keyword optimization, and meta enhancements for improved SEO rankings.
+        Designed and developed a fully responsive educational website using Bootstrap 5, HTML, and CSS.
+        Focused on accessibility, clean UI, and SEO optimization.<br/>
+        <a href="https://syedatayyeba.github.io/KnowRoo/" target="_blank">Live Link: syedatayyeba.github.io/KnowRoo/</a>
+      </p>
+
+      <p class="subheading">Company Landing Page</p>
+      <p>
+        Created a modern company landing page using Bootstrap 5, HTML, and CSS.
+        Ensured cross-browser compatibility and optimized layout for all devices.<br/>
+        <a href="https://syedatayyeba.github.io/Company-sDashboard/" target="_blank">Live Link: syedatayyeba.github.io/Company-sDashboard/</a>
+      </p>
+
+      <p class="subheading">Trading Web App (Binance Clone)</p>
+      <p>
+        Developed a trading web application using React.js and Material UI with authentication features.
+        Implemented secure login and UI inspired by Binance.<br/>
+        <span class="bold">Demo Login:</span> Email: <i>test@example.com</i>, Password: <i>pass123</i><br/>
+        <a href="https://syedatayyeba.github.io/AmazonJV/" target="_blank">Live Link: syedatayyeba.github.io/AmazonJV/</a>
       </p>
     </div>
 
     <div class="section">
       <h3>Education</h3>
-      <p class="subheading bold">BS in Information Technology (BSIT)</p>
+      <p class="subheading">BS in Information Technology (BSIT)</p>
       <p>Virtual University of Pakistan</p>
       <p>Currently Enrolled: 6th Semester</p>
       <p>Expected Graduation: 2026</p>
