--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <a href="https://syedatayyeba.github.io/Company-sDashboard/" target="_blank">Live Link: syedatayyeba.github.io/Company-sDashboard/</a>
       </p>
 
-      <p class="subheading">Trading Web App (Binance Clone)</p>
+      <p class="subheading">Trading Web </p>
       <p>
         Developed a trading web application using React.js and Material UI with authentication features.
         Implemented secure login and UI inspired by Binance.<br/>
