--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Resume of Syeda Tayyeba, a Frontend Developer skilled in React, Bootstrap, SEO, and modern web technologies." />
-  <meta name="keywords" content="Syeda Tayyeba, Frontend Developer, Web Developer, SEO Specialist, HTML, CSS, JavaScript, React, Bootstrap, Lahore Developer" />
+  <meta name="description" content="Resume of Syeda Tayyeba, a MERN Stack Developer skilled in React, Node.js, MongoDB, Redux, GraphQL, Tailwind CSS, and UI/UX transformation from Figma." />
+  <meta name="keywords" content="Syeda Tayyeba, MERN Stack Developer, React, Node.js, MongoDB, Express, Redux, GraphQL, Tailwind CSS, MUI, Figma to Code, Lahore Developer" />
   <meta name="author" content="Syeda Tayyeba" />
-  <title>Syeda Tayyeba – Frontend Developer & SEO Specialist</title>
+  <title>Syeda Tayyeba – MERN Stack Developer</title> 
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -81,17 +81,17 @@
 <body>
   <div class="resume">
     <h1>Syeda Tayyeba</h1>
-    <h2>Frontend Developer & SEO Specialist</h2>
+    <h2>MERN Stack Developer</h2>
     <p class="contact">Lahore, Pakistan | syedatayyeba78@gmail.com | 03094100215</p>
     <p class="linkedin"><a href="https://www.linkedin.com/in/syeda-tayyeba-6a665632b" target="_blank">LinkedIn Profile</a></p>
 
     <div class="section">
       <h3>Professional Summary</h3>
       <p>
-        Enthusiastic and detail-oriented Frontend Developer with hands-on experience in building responsive, user-focused websites.
-        Skilled in modern technologies including React, Bootstrap, and JavaScript, combined with strong knowledge of SEO best practices.
-        Capable of optimizing websites for performance, search engine visibility, and user engagement.
-        Successfully completed a professional internship contributing to real-world web development and SEO projects.
+        Passionate and skilled MERN Stack Developer with 1+ year of hands-on experience in building scalable, full-stack web applications.
+        Proficient in React, Node.js, Express, MongoDB, Redux, and GraphQL with a strong focus on responsive and user-centric interfaces.
+        Experienced in transforming Figma designs into pixel-perfect UIs using modern styling tools like Tailwind CSS and Material UI.
+        A team-oriented developer with a commitment to clean code, performance optimization, and intuitive user experiences.
       </p>
     </div>
 
@@ -99,57 +99,68 @@
       <h3>Technical Skills</h3>
       <ul>
         <li><span class="bold">Languages:</span> HTML, CSS, JavaScript, C++, OOP, DBMS</li>
-        <li><span class="bold">Frameworks & Libraries:</span> React, Bootstrap, Material UI (MUI)</li>
-        <li><span class="bold">SEO Tools & Techniques:</span> On-Page SEO, Off-Page SEO, Technical SEO, Keyword Research, Meta Tags Optimization, Structured Data, Google Search Console, Ahrefs</li>
-        <li><span class="bold">Developer Tools:</span> Git, VS Code, Chrome DevTools</li>
-        <li><span class="bold">Other:</span> Responsive Web Design, Cross-Browser Compatibility, UI/UX Principles</li>
+        <li><span class="bold">Frontend:</span> React.js, Redux, Bootstrap, Tailwind CSS, Material UI (MUI), Responsive Web Design</li>
+        <li><span class="bold">Backend:</span> Node.js, Express.js, REST APIs, GraphQL</li>
+        <li><span class="bold">Database:</span> MongoDB, Mongoose</li>
+        <li><span class="bold">UI/UX:</span> Figma to Code Conversion, Pixel-Perfect Layouts, Cross-Browser Compatibility, UI/UX Best Practices</li>
+        <li><span class="bold">Developer Tools:</span> Git, GitHub, VS Code, Chrome DevTools, Postman</li>
       </ul>
     </div>
 
-    <div class="section">
-      <h3>Experience</h3>
-      <p class="subheading">Frontend Intern — TecJaunt</p>
-      <p>Lahore, Pakistan (Jan 2025 – April 2025)</p>
-      <ul>
-        <li>Developed responsive user interfaces using HTML, CSS, JavaScript, and React.</li>
-        <li>Translated UI/UX designs into pixel-perfect components using Bootstrap and Material UI.</li>
-        <li>Implemented best practices in performance optimization and SEO structure.</li>
-        <li>Collaborated with senior developers in agile sprints to deliver project milestones.</li>
-      </ul>
-    </div>
+   <div class="section">
+  <h3>Experience</h3>
 
-    <div class="section">
+
+  <p class="subheading">MERN Stack Developer — Soft Solutions</p>
+  <p>Lahore, Pakistan ( March 2025 - Present )</p>
+  <ul>
+    <li>Built and maintained full-stack applications using React, Node.js, Express, and MongoDB.</li>
+    <li>Implemented Redux for complex state management and integrated GraphQL APIs for efficient data fetching.</li>
+    <li>Transformed Figma mockups into clean, responsive interfaces using Tailwind CSS and Material UI.</li>
+    <li>Collaborated in Agile development cycles, ensuring timely and high-quality releases.</li>
+  </ul>
+
+  <p class="subheading">Frontend Developer intern — TecJaunt</p>
+  <p>Lahore, Pakistan(Dec 2024 – Apr 2025 )</p>
+  <ul>
+    <li>Developed multiple client-facing websites using React, Tailwind CSS, and Bootstrap 5.</li>
+    <li>Worked closely with clients to translate Figma designs into interactive, responsive web pages.</li>
+    <li>Integrated REST APIs and ensured cross-browser compatibility.</li>
+    <li>Improved website performance and UX by refactoring and optimizing components.</li>
+  </ul>
+</div>
+
+<!--<div class="section">
       <h3>Projects</h3>
 
       <p class="subheading">Educational Website</p>
       <p>
-        Designed and developed a fully responsive educational website using Bootstrap 5, HTML, and CSS.
-        Focused on accessibility, clean UI, and SEO optimization.<br/>
+        Designed and developed a responsive educational platform using Bootstrap 5, HTML, and CSS.
+        Prioritized accessibility and user-friendly design.<br/>
         <a href="https://syedatayyeba.github.io/KnowRoo/" target="_blank">Live Link: syedatayyeba.github.io/KnowRoo/</a>
       </p>
 
       <p class="subheading">Company Landing Page</p>
       <p>
-        Created a modern company landing page using Bootstrap 5, HTML, and CSS.
-        Ensured cross-browser compatibility and optimized layout for all devices.<br/>
+        Developed a professional landing page using Bootstrap 5, ensuring cross-browser compatibility and responsive layout.<br/>
         <a href="https://syedatayyeba.github.io/Company-sDashboard/" target="_blank">Live Link: syedatayyeba.github.io/Company-sDashboard/</a>
       </p>
 
-      <p class="subheading">Trading Web </p>
+      <p class="subheading">Trading Web App</p>
       <p>
-        Developed a trading web application using React.js and Material UI with authentication features.
-        Implemented secure login and UI inspired by Binance.<br/>
+        Created a trading interface using React.js, Material UI, and mock login functionality.
+        Features secure authentication and Binance-style UI design.<br/>
         <span class="bold">Demo Login:</span> Email: <i>test@example.com</i>, Password: <i>pass123</i><br/>
         <a href="https://syedatayyeba.github.io/AmazonJV/" target="_blank">Live Link: syedatayyeba.github.io/AmazonJV/</a>
       </p>
     </div>
+    -->
+    
 
     <div class="section">
       <h3>Education</h3>
       <p class="subheading">BS in Information Technology (BSIT)</p>
       <p>Virtual University of Pakistan</p>
-      <p>Currently Enrolled: 6th Semester</p>
-      <p>Expected Graduation: 2026</p>
     </div>
   </div>
 </body>
