--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <li><span class="bold">Languages:</span> HTML, CSS, JavaScript, C++, OOP, DBMS</li>
         <li><span class="bold">Frontend:</span> React.js, Redux, Bootstrap, Tailwind CSS, Material UI (MUI), Responsive Web Design</li>
         <li><span class="bold">Backend:</span> Node.js, Express.js, REST APIs, GraphQL</li>
-        <li><span class="bold">Database:</span> MongoDB, Mongoose</li>
+        <li><span class="bold">Database:</span> MongoDB</li>
         <li><span class="bold">UI/UX:</span> Figma to Code Conversion, Pixel-Perfect Layouts, Cross-Browser Compatibility, UI/UX Best Practices</li>
         <li><span class="bold">Developer Tools:</span> Git, GitHub, VS Code, Chrome DevTools, Postman</li>
       </ul>
@@ -165,3 +165,4 @@
   </div>
 </body>
 </html>
+
